--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ click==8.0.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+cloud-init==21.4
 colorama==0.4.3
 command-not-found==0.3
 configobj==5.0.6
@@ -27,7 +28,7 @@ idna==2.8
 importlib-metadata==1.5.0
 incremental==16.10.1
 Jinja2==2.10.1
-jsonpatch==1.22
+jsonpatch==1.32
 jsonpointer==2.0
 jsonschema==3.2.0
 keyring==18.0.1
