--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,7 @@ click==8.0.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
-cloud-init==21.4
 colorama==0.4.3
-command-not-found==0.3
 configobj==5.0.6
 constantly==15.1.0
 cryptography==2.8
@@ -42,6 +40,7 @@ more-itertools==4.2.0
 netifaces==0.10.4
 oauthlib==3.1.0
 pexpect==4.6.0
+Pillow==8.4.0
 prompt-toolkit==3.0.23
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
